[gd_scene load_steps=2 format=3 uid="uid://bwkl6br8k7yx4"]

[ext_resource type="Script" path="res://scenes/memory/memory.gd" id="1_5lp68"]

[node name="memory" type="Node2D"]
script = ExtResource("1_5lp68")

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TurnBackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="TurnBackTimer" to="." method="_on_turn_back_timer_timeout"]
